# Multi-Monitor-Optimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
core/: calculationresult.h  calculator.cpp  calculator.h  monitor.cpp  monitor.h  optimizer.cpp  optimizer.h
gui/: mainwindow.cpp  mainwindow.h  monitorwidget.cpp  monitorwidget.h  resultitemwidget.cpp  resultitemwidget.h  resultswidget.cpp  resultswidget.h
tests/: CMakeLists.txt  test_calculator.cpp
